@@ -1,0 +1,10 @@
+package ucar.nc2.ft.point.standard;
+
+/**
+ * Describe
+ *
+ * @author caron
+ * @since Sep 22, 2009
+ */
+public class FilterMissing {
+}
